2008-04-23  Emmanuele Bassi  <ebassi@openedhand.com>

	* tests/test-script.json: Remove the explicit "visible"
	member to test that the visibility of actors is TRUE
	by default.

2008-04-23  Emmanuele Bassi  <ebassi@openedhand.com>

	* configure.ac:
	* clutter/Makefile.am: Do not build the internal JSON-GLib
	copy if there is a system installed one.

	* clutter/clutter-json.h: Remove.

	* clutter/clutter-json.h.in: Template for the clutter-json.h
	header file, used to opaquely include the JSON-GLib types.

2008-04-23  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-actor.c: Document :show-on-set-parent and
	the fact that calling clutter_actor_show() and hide() on an
	unparented actor will change that property as well as a side
	effect.

2008-04-23  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-actor.c (clutter_actor_set_property): Use the
	internal setter for the rotation center.

2008-04-23  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-actor.[ch]: Add units based variant of the
	rotation accessors.

2008-04-23  Emmanuele Bassi  <ebassi@openedhand.com>

	Bug 892 - Incorrect results using rotation-[center|angle] properties

	* clutter/clutter-actor.c:
	(clutter_actor_set_rotation_internal): Inline function for setting
	the rotation using fixed point for the angle and units for the
	center of rotation.

	(clutter_actor_set_property),
	(clutter_actor_set_rotationx): Use the internal setter to avoid
	loss of precision and too many conversions to and from units.

2008-04-23  Emmanuele Bassi  <ebassi@openedhand.com>

	Bug 891 - assertion failed when test-behave exits

	* clutter/clutter-behaviour.c:
	(remove_actor_on_destroy),
	(clutter_behaviour_apply),
	(clutter_behaviour_remove): Remove the actor if it gets
	destroyed before the behaviour.

2008-04-18  Emmanuele Bassi  <ebassi@openedhand.com>

	Bug #884 - Add clutter_alpha_set_closure

	* clutter/clutter-alpha.[ch]: Add clutter_alpha_set_closure(),