@@ -2,6 +2,7 @@
 #include "config.h"
 #endif
 
+#include "clutter-backend-egl.h"
 #include "clutter-stage-egl.h"
 #include "clutter-egl.h"
 
@@ -14,64 +15,63 @@
 #include "../clutter-private.h"
 #include "../clutter-debug.h"
 #include "../clutter-units.h"
+#include "../clutter-stage.h"
+#include "../clutter-stage-window.h"
 
-G_DEFINE_TYPE (ClutterStageEGL, clutter_stage_egl, CLUTTER_TYPE_STAGE);
+static void clutter_stage_window_iface_init (ClutterStageWindowIface *iface);
+
+G_DEFINE_TYPE_WITH_CODE (ClutterStageEGL,
+                         clutter_stage_egl,
+                         CLUTTER_TYPE_ACTOR,
+                         G_IMPLEMENT_INTERFACE (CLUTTER_TYPE_STAGE_WINDOW,
+                                                clutter_stage_window_iface_init));
 
 static void
 clutter_stage_egl_show (ClutterActor *actor)
 {
-  ClutterStageEGL *stage_egl = CLUTTER_STAGE_EGL (actor);
-
-  CLUTTER_ACTOR_SET_FLAGS (stage_egl, CLUTTER_ACTOR_MAPPED);
+  CLUTTER_ACTOR_CLASS (clutter_stage_egl_parent_class)->show (actor);
 }
 
 static void
 clutter_stage_egl_hide (ClutterActor *actor)
 {
-  ClutterStageEGL *stage_egl = CLUTTER_STAGE_EGL (actor);
-
-  CLUTTER_ACTOR_UNSET_FLAGS (stage_egl, CLUTTER_ACTOR_MAPPED);
+  CLUTTER_ACTOR_CLASS (clutter_stage_egl_parent_class)->hide (actor);
 }
 
 static void
 clutter_stage_egl_unrealize (ClutterActor *actor)
 {
   ClutterStageEGL *stage_egl = CLUTTER_STAGE_EGL (actor);
-  gboolean was_offscreen;
 
   CLUTTER_MARK();
 
-  g_object_get (actor, "offscreen", &was_offscreen, NULL);
+  CLUTTER_ACTOR_CLASS (clutter_stage_egl_parent_class)->unrealize (actor);
 
   if (stage_egl->egl_surface)
-    eglDestroySurface (clutter_egl_display(), stage_egl->egl_surface);
-  stage_egl->egl_surface = NULL;
+    {
+      eglDestroySurface (clutter_egl_display(), stage_egl->egl_surface);
+      stage_egl->egl_surface = EGL_NO_SURFACE;
+    }
 
-  if (stage_egl->egl_context)
-    eglDestroyContext (clutter_egl_display(), stage_egl->egl_context);
-  stage_egl->egl_context = NULL;
-
-  eglMakeCurrent (clutter_egl_display(), 
-		  EGL_NO_SURFACE, EGL_NO_SURFACE, EGL_NO_CONTEXT);
-
-  stage_egl->egl_context = EGL_NO_CONTEXT;
+  clutter_stage_ensure_current (stage_egl->wrapper);
 }
 
 static void
 clutter_stage_egl_realize (ClutterActor *actor)
 {
-  ClutterStageEGL *stage_egl = CLUTTER_STAGE_EGL (actor);
-
+  ClutterStageEGL     *stage_egl = CLUTTER_STAGE_EGL (actor);
+  ClutterBackendEGL   *backend_egl;
   EGLConfig            configs[2];
   EGLint               config_count;
   EGLBoolean           status;
   ClutterPerspective   perspective;
-
-  gboolean is_offscreen;
+  gboolean             is_offscreen;
 
   CLUTTER_NOTE (BACKEND, "Realizing main stage");
 
-  g_object_get (actor, "offscreen", &is_offscreen, NULL);
+  g_object_get (stage_egl->wrapper, "offscreen", &is_offscreen, NULL);
+
+  backend_egl = CLUTTER_BACKEND_EGL (clutter_get_default_backend ());
 
   if (G_LIKELY (!is_offscreen))
     {
@@ -84,67 +84,81 @@ clutter_stage_egl_realize (ClutterActor *actor)
 			       EGL_STENCIL_SIZE,   EGL_DONT_CARE,
 			       EGL_SURFACE_TYPE,   EGL_WINDOW_BIT,
 			       EGL_NONE };
-      
-      status = eglGetConfigs (clutter_egl_display(), 
+
+      status = eglGetConfigs (backend_egl->edpy,
 			      configs, 
 			      2, 
 			      &config_count);
-      
+
       if (status != EGL_TRUE)
-	g_warning ("eglGetConfigs");		
-      
-      status = eglChooseConfig (clutter_egl_display(), 
-				cfg_attribs, 
-				configs, 
-				sizeof configs / sizeof configs[0], 
+	g_warning ("eglGetConfigs failed");
+
+      status = eglChooseConfig (backend_egl->edpy,
+				cfg_attribs,
+				configs,
+                                G_N_ELEMENTS (configs),
 				&config_count);
 
       if (status != EGL_TRUE)
-	g_warning ("eglChooseConfig");		
+	g_warning ("eglChooseConfig failed");
 
-      if (stage_egl->egl_context)
-	eglDestroyContext (clutter_egl_display(), stage_egl->egl_context);
+      if (stage_egl->egl_surface != EGL_NO_SURFACE)
+        {
+	  eglDestroySurface (backend_egl->edpy, stage_egl->egl_surface);
+          stage_egl->egl_surface = EGL_NO_SURFACE;
+        }
 
-      if (stage_egl->egl_surface)
-	eglDestroySurface (clutter_egl_display(), stage_egl->egl_surface);
+      stage_egl->egl_surface =
+	eglCreateWindowSurface (backend_egl->edpy,
+                                configs[0],
+                                NULL,
+                                NULL);
 
-      stage_egl->egl_surface 
-	= eglCreateWindowSurface (clutter_egl_display(), 
-				  configs[0], 
-				  NULL, 
-				  NULL);
+      if (stage_egl->egl_surface == EGL_NO_SURFACE)
+        {
+	  g_critical ("Unable to create an EGL surface");
 
-      eglQuerySurface (clutter_egl_display(),
+          CLUTTER_ACTOR_UNSET_FLAGS (actor, CLUTTER_ACTOR_REALIZED);
+          return;
+        }
+
+      eglQuerySurface (backend_egl->edpy,
 		       stage_egl->egl_surface,
 		       EGL_WIDTH,
 		       &stage_egl->surface_width);
 
-      eglQuerySurface (clutter_egl_display(),
+      eglQuerySurface (backend_egl->edpy,
 		       stage_egl->egl_surface,
 		       EGL_HEIGHT,
 		       &stage_egl->surface_height);
 
-      if (stage_egl->egl_surface == EGL_NO_SURFACE)
-	g_warning ("eglCreateWindowSurface");
-      
-      CLUTTER_NOTE (BACKEND, "surface is %ix%i", 
-		    stage_egl->surface_width, stage_egl->surface_height);
+      CLUTTER_NOTE (BACKEND, "EGL surface is %ix%i", 
+		    stage_egl->surface_width,
+                    stage_egl->surface_height);
 
-      stage_egl->egl_context = eglCreateContext (clutter_egl_display(), 
-						 configs[0], 
-						 EGL_NO_CONTEXT, 
-						 NULL);
+      if (G_UNLIKELY (backend_egl->egl_context == None))
+        {
+          CLUTTER_NOTE (GL, "Creating EGL Context");
 
-      if (stage_egl->egl_context == EGL_NO_CONTEXT)
-	g_warning ("eglCreateContext");
-      
-      status = eglMakeCurrent (clutter_egl_display(), 
-			       stage_egl->egl_surface, 
-			       stage_egl->egl_surface, 
-			       stage_egl->egl_context);
+          backend_egl->egl_context = eglCreateContext (backend_egl->edpy,
+                                                       configs[0],
+                                                       EGL_NO_CONTEXT,
+                                                       NULL);
 
-      if (status != EGL_TRUE)
-	g_warning ("eglMakeCurrent");		
+          if (backend_egl->egl_context == EGL_NO_CONTEXT)
+            {
+              g_critical ("Unable to create a suitable EGL context");
+
+              CLUTTER_ACTOR_UNSET_FLAGS (actor, CLUTTER_ACTOR_REALIZED);
+              return;
+            }
+        }
+
+      /* this will make sure to set the current context */
+      CLUTTER_NOTE (BACKEND, "Marking stage as realized and setting context");
+      CLUTTER_ACTOR_SET_FLAGS (stage_egl->wrapper, CLUTTER_ACTOR_REALIZED);
+      CLUTTER_ACTOR_SET_FLAGS (stage_egl, CLUTTER_ACTOR_REALIZED);
+      clutter_stage_ensure_current (stage_egl->wrapper);
     }
   else
     {
@@ -153,18 +167,12 @@ clutter_stage_egl_realize (ClutterActor *actor)
       return;
     }
 
-  clutter_stage_get_perspectivex (CLUTTER_STAGE (actor), &perspective);
-  cogl_setup_viewport (clutter_actor_get_width (actor),
-		       clutter_actor_get_height (actor),
-		       perspective.fovy,
-		       perspective.aspect,
-		       perspective.z_near,
-		       perspective.z_far);
+  CLUTTER_SET_PRIVATE_FLAGS (stage_egl->wrapper, CLUTTER_ACTOR_SYNC_MATRICES);
 }
 
 static void
-clutter_stage_egl_query_coords (ClutterActor        *self,
-                                   ClutterActorBox     *box)
+clutter_stage_egl_query_coords (ClutterActor    *self,
+                                ClutterActorBox *box)
 {
   ClutterStageEGL *stage_egl = CLUTTER_STAGE_EGL (self);
 
@@ -174,8 +182,8 @@ clutter_stage_egl_query_coords (ClutterActor        *self,
 }
 
 static void
-clutter_stage_egl_request_coords (ClutterActor        *self,
-				  ClutterActorBox     *box)
+clutter_stage_egl_request_coords (ClutterActor    *self,
+				  ClutterActorBox *box)
 {
   ClutterStageEGL *stage_egl = CLUTTER_STAGE_EGL (self);
 
@@ -184,26 +192,9 @@ clutter_stage_egl_request_coords (ClutterActor        *self,
   box->y1 = 0;
   box->x2 = CLUTTER_UNITS_FROM_INT (stage_egl->surface_width);
   box->y2 = CLUTTER_UNITS_FROM_INT (stage_egl->surface_height);
-}
 
-static void
-clutter_stage_egl_set_fullscreen (ClutterStage *stage,
-                                  gboolean      fullscreen)
-{
-  g_warning ("Stage of type `%s' do not support ClutterStage::set_fullscreen",
-             G_OBJECT_TYPE_NAME (stage));
-}
-
-static GdkPixbuf*
-clutter_stage_egl_draw_to_pixbuf (ClutterStage *stage,
-                                  gint          x,
-                                  gint          y,
-                                  gint          width,
-                                  gint          height)
-{
-  g_warning ("Stage of type `%s' do not support ClutterStage::draw_to_pixbuf",
-             G_OBJECT_TYPE_NAME (stage));
-  return NULL;
+  CLUTTER_ACTOR_CLASS (clutter_stage_egl_parent_class)->request_coords (self,
+                                                                        box);
 }
 
 static void
@@ -224,21 +215,30 @@ clutter_stage_egl_class_init (ClutterStageEGLClass *klass)
   ClutterStageClass *stage_class = CLUTTER_STAGE_CLASS (klass);
 
   gobject_class->dispose = clutter_stage_egl_dispose;
-  
+
   actor_class->show = clutter_stage_egl_show;
   actor_class->hide = clutter_stage_egl_hide;
   actor_class->realize = clutter_stage_egl_realize;
   actor_class->unrealize = clutter_stage_egl_unrealize;
   actor_class->request_coords = clutter_stage_egl_request_coords;
   actor_class->query_coords = clutter_stage_egl_query_coords;
-    stage_class->set_fullscreen = clutter_stage_egl_set_fullscreen;
-  stage_class->draw_to_pixbuf = clutter_stage_egl_draw_to_pixbuf;
+}
+
+static void
+clutter_stage_egl_set_fullscreen (ClutterStageWindow *stage_window,
+                                  gboolean            fullscreen)
+{
+  g_warning ("Stage of type `%s' do not support ClutterStage::set_fullscreen",
+             G_OBJECT_TYPE_NAME (stage_window));
+}
+
+static void
+clutter_stage_window_iface_init (ClutterStageWindowIface *iface)
+{
+  iface->set_fullscreen = clutter_stage_egl_set_fullscreen;
 }
 
 static void
 clutter_stage_egl_init (ClutterStageEGL *stage)
 {
-  ;
 }
-
-
